--- a/news.html
+++ b/news.html
@@ -11,71 +11,92 @@
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
-    /* تحسينات فقط لشكل كروت الأخبار دون التأثير على بقية الصفحة */
-    .events-grid {
+    /* تحسينات التصميم للبطاقات */
+    #posts {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      gap: 2rem;
       padding: 1rem 0;
     }
 
-    .news-card-enhanced {
-      background: #fff;
-      border-radius: 12px;
+    .news-card {
+      background: #ffffff;
+      border-radius: 16px;
+      border: 1px solid #edf2f7;
       overflow: hidden;
-      border: 1px solid #e2e8f0;
-      transition: all 0.3s ease;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       display: flex;
       flex-direction: column;
-      height: 100%;
-      text-decoration: none;
-      color: inherit;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
     }
 
-    .news-card-enhanced:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+    .news-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
       border-color: var(--primary);
     }
 
-    .news-card-img {
+    .news-card-image {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
-      background: #f1f5f9;
+      background-color: #f7fafc;
     }
 
-    .news-card-body {
-      padding: 1.25rem;
-      flex-grow: 1;
+    .news-card-content {
+      padding: 1.5rem;
       display: flex;
       flex-direction: column;
+      flex-grow: 1;
     }
 
-    .news-card-category {
-      font-size: 0.7rem;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      color: var(--primary);
-      font-weight: bold;
-      margin-bottom: 0.5rem;
+    .news-card-tag {
+      display: inline-block;
+      padding: 4px 12px;
+      background: #ebf8ff;
+      color: #3182ce;
+      border-radius: 20px;
+      font-size: 0.75rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      width: fit-content;
     }
 
     .news-card-title {
-      font-size: 1.15rem;
-      font-weight: 700;
+      font-size: 1.25rem;
+      font-weight: 800;
+      color: #1a202c;
       margin-bottom: 0.75rem;
       line-height: 1.4;
     }
 
-    .news-card-text {
-      font-size: 0.9rem;
-      color: #64748b;
+    .news-card-desc {
+      font-size: 0.95rem;
+      color: #4a5568;
       line-height: 1.6;
       display: -webkit-box;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      margin-bottom: 1.5rem;
+    }
+
+    .news-card-footer {
+      margin-top: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 1rem;
+      border-top: 1px solid #edf2f7;
+    }
+
+    .read-more-btn {
+      color: var(--primary);
+      font-weight: 700;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      gap: 4px;
     }
   </style>
 
@@ -91,14 +112,11 @@
       <span data-lang="ar">مجلس طلاب خطوة</span>
       <span data-lang="en" hidden>Khotwa Student Council</span>
     </a>
-
     <button id="menu-toggle" class="menu-toggle">
-      <svg viewBox="0 0 24 24" width="24" height="24" fill="none"
-           stroke="currentColor" stroke-width="2">
+      <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M4 6h16M4 12h16M4 18h16"></path>
       </svg>
     </button>
-
     <div class="nav-links" id="primary-nav">
       <a href="/index.html">الرئيسية</a>
       <a href="/news.html" class="active">الأخبار</a>
@@ -109,55 +127,38 @@
   </div>
 </nav>
 
-<main class="container" id="main">
-
-  <header style="text-align:center; padding:3rem 0;">
-    <h1 data-lang="ar">الأخبار</h1>
-    <h1 data-lang="en" hidden>News</h1>
-    <p class="muted" data-lang="ar">كل جديد عن مجلس طلاب خطوة</p>
-    <p class="muted" data-lang="en" hidden>All the latest from Khotwa Student Council</p>
+<main class="container">
+  <header style="text-align:center; padding:4rem 0 3rem;">
+    <h1 style="font-size: 2.5rem; font-weight: 900; margin-bottom: 1rem;">آخر الأخبار</h1>
+    <p class="muted">تابع كل جديد وفعاليات مجلس طلاب خطوة</p>
   </header>
 
-  <div class="tools" style="margin-bottom:2rem;">
-    <input id="q" type="search" placeholder="ابحث في الأخبار…" />
-
-    <button class="chip" data-filter="all" data-active="true">الكل</button>
-    <button class="chip" data-filter="ann">إعلانات</button>
-    <button class="chip" data-filter="event">فعاليات</button>
-    <button class="chip" data-filter="media">تغطيات</button>
+  <div class="tools" style="margin-bottom:3rem; display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+    <input id="q" type="search" placeholder="ابحث في الأخبار…" style="max-width: 400px; border-radius: 50px; padding: 0.75rem 1.5rem;" />
+    <div style="display: flex; gap: 0.5rem;">
+      <button class="chip" data-filter="all" data-active="true">الكل</button>
+      <button class="chip" data-filter="ann">إعلانات</button>
+      <button class="chip" data-filter="event">فعاليات</button>
+    </div>
   </div>
 
-  <section>
-    <div class="events-grid" id="posts">
-      <div class="skeleton"></div>
-      <div class="skeleton"></div>
-      <div class="skeleton"></div>
-    </div>
+  <section id="posts">
+    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
+    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
+    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
   </section>
-
 </main>
 
-<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:4rem;">
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:4rem 0; margin-top:4rem;">
   <div class="container">
     <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
       <div>
-        <strong data-lang="ar">مجلس طلاب خطوة</strong>
-        <strong data-lang="en" hidden>Khotwa Council</strong>
-        <p style="font-size:0.9rem; color:#64748b;">
-          © <span id="year"></span> |
-          <span data-lang="ar">ملبورن، أستراليا</span>
-          <span data-lang="en" hidden>Melbourne, Australia</span>
-        </p>
+        <strong>مجلس طلاب خطوة</strong>
+        <p style="font-size:0.9rem; color:#64748b; margin-top: 0.5rem;">© <span id="year"></span> | ملبورن، أستراليا</p>
       </div>
       <div style="display:flex; gap:1.5rem;">
-        <a href="https://instagram.com/khotwa.sc"
-           style="color:#e1306c; font-weight:bold; text-decoration:none;">
-          Instagram
-        </a>
-        <a href="/contact.html" style="color:var(--primary); text-decoration:none;">
-          <span data-lang="ar">تواصل معنا</span>
-          <span data-lang="en" hidden>Contact</span>
-        </a>
+        <a href="https://instagram.com/khotwa.sc" style="color:#e1306c; font-weight:bold;">Instagram</a>
+        <a href="/contact.html" style="color:var(--primary);">تواصل معنا</a>
       </div>
     </div>
   </div>
@@ -165,10 +166,9 @@
 
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
-
 const postsEl = document.getElementById("posts");
-const qInput  = document.getElementById("q");
-const chips   = document.querySelectorAll(".chip");
+const qInput = document.getElementById("q");
+const chips = document.querySelectorAll(".chip");
 
 let currentQuery = "";
 let currentCategory = "all";
@@ -178,68 +178,48 @@ async function loadNews() {
   
   try {
     let items = await KhotwaAPI.getNews();
-
     if (!items || !items.length) {
-      postsEl.innerHTML = "<p class='muted'>لا توجد أخبار</p>";
+      postsEl.innerHTML = "<p class='muted'>لا توجد أخبار حالياً.</p>";
       return;
     }
 
-    // الفلترة
     items = items.filter(item => {
       const title = (item.titleAr || item.titleEn || "").toLowerCase();
-      const content = (item.contentAr || item.contentEn || "").toLowerCase();
       const query = currentQuery.toLowerCase();
-
-      const matchesQuery = !currentQuery || title.includes(query) || content.includes(query);
-
+      const matchesQuery = !currentQuery || title.includes(query);
       if (currentCategory === "all") return matchesQuery;
       return matchesQuery && (item.category || "").toLowerCase() === currentCategory;
     });
 
-    if (!items.length) {
-      postsEl.innerHTML = "<p class='muted'>لا توجد أخبار تطابق بحثك</p>";
-      return;
-    }
-
     postsEl.innerHTML = "";
-
     items.forEach(item => {
-      const title = lang === "ar" ? (item.titleAr || item.titleEn || "") : (item.titleEn || item.titleAr || "");
-      const content = lang === "ar" ? (item.contentAr || item.contentEn || "") : (item.contentEn || item.contentAr || "");
-      
-      // جلب الصورة من الـ API أو صورة افتراضية
-      const imgUrl = item.image || '/assets/apple-touch-icon.png';
+      const title = lang === "ar" ? (item.titleAr || item.titleEn) : (item.titleEn || item.titleAr);
+      const content = lang === "ar" ? (item.contentAr || item.contentEn) : (item.contentEn || item.contentAr);
+      const image = item.image || "/assets/apple-touch-icon.png";
 
       const card = document.createElement("article");
-      card.className = "news-card-enhanced";
-      card.style.cursor = "pointer";
-
+      card.className = "news-card";
       card.innerHTML = `
-        <img src="${imgUrl}" class="news-card-img" alt="${title}" onerror="this.style.display='none'">
-        <div class="news-card-body">
-          <div class="news-card-category">${item.category || 'خبر'}</div>
+        <img src="${image}" class="news-card-image" alt="${title}" onerror="this.src='/assets/apple-touch-icon.png'">
+        <div class="news-card-content">
+          <span class="news-card-tag">${item.category || 'خبر'}</span>
           <h3 class="news-card-title">${title}</h3>
-          <p class="news-card-text">${content}</p>
+          <p class="news-card-desc">${content}</p>
+          <div class="news-card-footer">
+            <span style="font-size: 0.8rem; color: #718096;">${item.date || ''}</span>
+            <span class="read-more-btn">اقرأ المزيد ←</span>
+          </div>
         </div>
       `;
-
-      card.onclick = () => {
-        location.href = `/news-detail.html?id=${item.id}`;
-      };
-
+      card.onclick = () => location.href = `/news-detail.html?id=${item.id}`;
       postsEl.appendChild(card);
     });
   } catch (err) {
-    console.error(err);
-    postsEl.innerHTML = "<p class='muted'>حدث خطأ في تحميل الأخبار</p>";
+    postsEl.innerHTML = "<p>عذراً، حدث خطأ أثناء تحميل الأخبار.</p>";
   }
 }
 
-qInput.addEventListener("input", e => {
-  currentQuery = e.target.value.trim();
-  loadNews();
-});
-
+qInput.addEventListener("input", e => { currentQuery = e.target.value.trim(); loadNews(); });
 chips.forEach(btn => {
   btn.addEventListener("click", () => {
     chips.forEach(b => b.dataset.active = "false");
