--- a/news.html
+++ b/news.html
@@ -11,92 +11,143 @@
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
-    /* تحسينات التصميم للبطاقات */
-    #posts {
+    /* تحسينات الواجهة - مظهر الأزرار والكروت */
+    :root {
+      --primary-color: #0284c7;
+    }
+
+    /* تنسيق حاوية الفلاتر والبحث */
+    .filters-container {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      margin-bottom: 3rem;
+      align-items: center;
+    }
+
+    .search-box {
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .search-box input {
+      width: 100%;
+      padding: 12px 24px;
+      border-radius: 50px;
+      border: 1px solid #e2e8f0;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+    }
+
+    .search-box input:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 3px rgba(2, 132, 199, 0.1);
+      outline: none;
+    }
+
+    .chips-group {
+      display: flex;
+      gap: 0.75rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .chip {
+      padding: 10px 22px;
+      border-radius: 50px;
+      border: 1px solid #e2e8f0;
+      background: #fff;
+      color: #64748b;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .chip[data-active="true"] {
+      background: var(--primary-color);
+      color: #fff;
+      border-color: var(--primary-color);
+      box-shadow: 0 4px 12px rgba(2, 132, 199, 0.2);
+    }
+
+    /* تنسيق شبكة الأخبار والكروت */
+    .events-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
       gap: 2rem;
-      padding: 1rem 0;
     }
 
     .news-card {
-      background: #ffffff;
+      background: #fff;
       border-radius: 16px;
       border: 1px solid #edf2f7;
       overflow: hidden;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: all 0.3s ease;
       display: flex;
       flex-direction: column;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
     }
 
     .news-card:hover {
       transform: translateY(-8px);
-      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-      border-color: var(--primary);
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
     }
 
-    .news-card-image {
+    .news-card-img {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      background-color: #f7fafc;
+      background: #f1f5f9;
     }
 
-    .news-card-content {
+    .news-card-body {
       padding: 1.5rem;
       display: flex;
       flex-direction: column;
       flex-grow: 1;
     }
 
-    .news-card-tag {
-      display: inline-block;
+    .news-tag {
+      background: #f0f9ff;
+      color: var(--primary-color);
       padding: 4px 12px;
-      background: #ebf8ff;
-      color: #3182ce;
       border-radius: 20px;
       font-size: 0.75rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      margin-bottom: 0.75rem;
       width: fit-content;
     }
 
-    .news-card-title {
+    .news-title {
       font-size: 1.25rem;
       font-weight: 800;
-      color: #1a202c;
       margin-bottom: 0.75rem;
       line-height: 1.4;
     }
 
-    .news-card-desc {
+    .news-excerpt {
+      color: #64748b;
       font-size: 0.95rem;
-      color: #4a5568;
       line-height: 1.6;
       display: -webkit-box;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      margin-bottom: 1.5rem;
     }
 
-    .news-card-footer {
-      margin-top: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 1rem;
-      border-top: 1px solid #edf2f7;
+    /* Skeleton Loading */
+    .skeleton-box {
+      height: 350px;
+      background: #eee;
+      border-radius: 16px;
+      animation: pulse 1.5s infinite;
     }
 
-    .read-more-btn {
-      color: var(--primary);
-      font-weight: 700;
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      gap: 4px;
+    @keyframes pulse {
+      0% { opacity: 1; }
+      50% { opacity: 0.5; }
+      100% { opacity: 1; }
     }
   </style>
 
@@ -110,7 +161,6 @@
     <a class="brand" href="/index.html">
       <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
       <span data-lang="ar">مجلس طلاب خطوة</span>
-      <span data-lang="en" hidden>Khotwa Student Council</span>
     </a>
     <button id="menu-toggle" class="menu-toggle">
       <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
@@ -128,37 +178,42 @@
 </nav>
 
 <main class="container">
-  <header style="text-align:center; padding:4rem 0 3rem;">
-    <h1 style="font-size: 2.5rem; font-weight: 900; margin-bottom: 1rem;">آخر الأخبار</h1>
-    <p class="muted">تابع كل جديد وفعاليات مجلس طلاب خطوة</p>
+  <header style="text-align:center; padding:4rem 0 2rem;">
+    <h1>الأخبار</h1>
+    <p class="muted">كل ما هو جديد في مجلس طلاب خطوة</p>
   </header>
 
-  <div class="tools" style="margin-bottom:3rem; display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
-    <input id="q" type="search" placeholder="ابحث في الأخبار…" style="max-width: 400px; border-radius: 50px; padding: 0.75rem 1.5rem;" />
-    <div style="display: flex; gap: 0.5rem;">
+  <div class="filters-container">
+    <div class="search-box">
+      <input id="q" type="search" placeholder="ابحث في الأخبار…" />
+    </div>
+    <div class="chips-group">
       <button class="chip" data-filter="all" data-active="true">الكل</button>
       <button class="chip" data-filter="ann">إعلانات</button>
       <button class="chip" data-filter="event">فعاليات</button>
+      <button class="chip" data-filter="media">تغطيات</button>
     </div>
   </div>
 
-  <section id="posts">
-    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
-    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
-    <div class="skeleton" style="height: 300px; border-radius: 16px;"></div>
+  <section>
+    <div class="events-grid" id="posts">
+      <div class="skeleton-box"></div>
+      <div class="skeleton-box"></div>
+      <div class="skeleton-box"></div>
+    </div>
   </section>
 </main>
 
-<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:4rem 0; margin-top:4rem;">
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:4rem;">
   <div class="container">
     <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
       <div>
         <strong>مجلس طلاب خطوة</strong>
-        <p style="font-size:0.9rem; color:#64748b; margin-top: 0.5rem;">© <span id="year"></span> | ملبورن، أستراليا</p>
+        <p style="font-size:0.9rem; color:#64748b;">© <span id="year"></span> | ملبورن، أستراليا</p>
       </div>
       <div style="display:flex; gap:1.5rem;">
-        <a href="https://instagram.com/khotwa.sc" style="color:#e1306c; font-weight:bold;">Instagram</a>
-        <a href="/contact.html" style="color:var(--primary);">تواصل معنا</a>
+        <a href="https://instagram.com/khotwa.sc" style="color:#e1306c; font-weight:bold; text-decoration:none;">Instagram</a>
+        <a href="/contact.html" style="color:var(--primary); text-decoration:none;">تواصل معنا</a>
       </div>
     </div>
   </div>
@@ -166,9 +221,10 @@
 
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
+
 const postsEl = document.getElementById("posts");
-const qInput = document.getElementById("q");
-const chips = document.querySelectorAll(".chip");
+const qInput  = document.getElementById("q");
+const chips   = document.querySelectorAll(".chip");
 
 let currentQuery = "";
 let currentCategory = "all";
@@ -178,48 +234,60 @@ async function loadNews() {
   
   try {
     let items = await KhotwaAPI.getNews();
+
     if (!items || !items.length) {
-      postsEl.innerHTML = "<p class='muted'>لا توجد أخبار حالياً.</p>";
+      postsEl.innerHTML = "<p class='muted'>لا توجد أخبار حالياً</p>";
       return;
     }
 
+    // الفلترة والبحث
     items = items.filter(item => {
       const title = (item.titleAr || item.titleEn || "").toLowerCase();
+      const content = (item.contentAr || item.contentEn || "").toLowerCase();
       const query = currentQuery.toLowerCase();
-      const matchesQuery = !currentQuery || title.includes(query);
+      const matchesQuery = !currentQuery || title.includes(query) || content.includes(query);
+
       if (currentCategory === "all") return matchesQuery;
       return matchesQuery && (item.category || "").toLowerCase() === currentCategory;
     });
 
+    if (items.length === 0) {
+      postsEl.innerHTML = "<p class='muted'>لا توجد نتائج تطابق بحثك</p>";
+      return;
+    }
+
     postsEl.innerHTML = "";
+
     items.forEach(item => {
       const title = lang === "ar" ? (item.titleAr || item.titleEn) : (item.titleEn || item.titleAr);
       const content = lang === "ar" ? (item.contentAr || item.contentEn) : (item.contentEn || item.contentAr);
-      const image = item.image || "/assets/apple-touch-icon.png";
+      const img = item.image || '/assets/apple-touch-icon.png';
 
       const card = document.createElement("article");
       card.className = "news-card";
+      card.onclick = () => location.href = `/news-detail.html?id=${item.id}`;
+
       card.innerHTML = `
-        <img src="${image}" class="news-card-image" alt="${title}" onerror="this.src='/assets/apple-touch-icon.png'">
-        <div class="news-card-content">
-          <span class="news-card-tag">${item.category || 'خبر'}</span>
-          <h3 class="news-card-title">${title}</h3>
-          <p class="news-card-desc">${content}</p>
-          <div class="news-card-footer">
-            <span style="font-size: 0.8rem; color: #718096;">${item.date || ''}</span>
-            <span class="read-more-btn">اقرأ المزيد ←</span>
-          </div>
+        <img src="${img}" class="news-card-img" alt="${title}" onerror="this.src='/assets/apple-touch-icon.png'">
+        <div class="news-card-body">
+          <span class="news-tag">${item.category || 'خبر'}</span>
+          <h3 class="news-title">${title}</h3>
+          <p class="news-excerpt">${content}</p>
+          <div style="margin-top:auto; font-size:0.8rem; color:#94a3b8;">${item.date || ''}</div>
         </div>
       `;
-      card.onclick = () => location.href = `/news-detail.html?id=${item.id}`;
       postsEl.appendChild(card);
     });
   } catch (err) {
-    postsEl.innerHTML = "<p>عذراً، حدث خطأ أثناء تحميل الأخبار.</p>";
+    postsEl.innerHTML = "<p class='muted'>حدث خطأ أثناء تحميل الأخبار</p>";
   }
 }
 
-qInput.addEventListener("input", e => { currentQuery = e.target.value.trim(); loadNews(); });
+qInput.addEventListener("input", e => {
+  currentQuery = e.target.value.trim();
+  loadNews();
+});
+
 chips.forEach(btn => {
   btn.addEventListener("click", () => {
     chips.forEach(b => b.dataset.active = "false");
