--- a/news-detail.html
+++ b/news-detail.html
@@ -11,92 +11,71 @@
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
+    /* إصلاحات عاجلة لمشاكل الجوال والناف بار */
+    body {
+      padding-top: 80px !important; /* لضمان عدم اختفاء المحتوى تحت الناف بار */
+    }
+
+    @media (max-width: 960px) {
+      body {
+        padding-top: 70px !important;
+      }
+    }
+
     .news-detail-wrapper {
       max-width: 850px;
-      margin: 40px auto;
+      margin: 20px auto 60px;
       padding: 0 20px;
     }
 
-    .btn-back {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      color: #64748b;
-      text-decoration: none;
-      font-weight: 600;
-      margin-bottom: 30px;
-    }
-
-    .news-header { margin-bottom: 30px; }
-
-    .news-category-badge {
-      background: #f0f9ff;
-      color: #0284c7;
-      padding: 6px 16px;
-      border-radius: 50px;
-      font-size: 0.85rem;
-      font-weight: 700;
-      margin-bottom: 15px;
-      display: inline-block;
-    }
-
-    .news-title-main {
-      font-size: clamp(1.8rem, 5vw, 2.5rem);
-      line-height: 1.3;
-      font-weight: 800;
-      color: #0f172a;
-      margin-bottom: 15px;
-    }
-
-    /* تحسين عرض الصورة لضمان ظهورها */
+    /* تنسيق الصورة لضمان ظهورها */
     .news-main-img-container {
       width: 100%;
-      margin: 30px 0;
-      border-radius: 20px;
+      margin: 25px 0;
+      border-radius: 15px;
       overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      background: #f1f5f9;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      background: #f8fafc;
     }
 
     .news-main-img {
       width: 100%;
       height: auto;
       display: block;
-      min-height: 200px;
-      object-fit: cover;
     }
 
     .news-article-body {
-      font-size: 1.2rem;
-      line-height: 1.9;
+      font-size: 1.15rem;
+      line-height: 1.8;
       color: #334155;
     }
 
     .news-article-body p { margin-bottom: 20px; }
 
+    /* تنسيق أزرار المشاركة */
     .share-section {
-      margin-top: 50px;
-      padding: 30px;
+      margin-top: 40px;
+      padding: 25px;
       background: #f8fafc;
-      border-radius: 20px;
+      border-radius: 15px;
       text-align: center;
     }
 
     .share-grid {
       display: flex;
-      gap: 12px;
+      gap: 10px;
       justify-content: center;
       flex-wrap: wrap;
       margin-top: 15px;
     }
 
     .share-btn {
-      padding: 10px 24px;
-      border-radius: 12px;
+      padding: 8px 18px;
+      border-radius: 8px;
       color: white;
       text-decoration: none;
       font-weight: 700;
-      transition: transform 0.2s;
+      font-size: 0.85rem;
     }
 
     .tw { background: #000; }
@@ -115,6 +94,11 @@
       <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
       <span data-lang="ar">مجلس طلاب خطوة</span>
     </a>
+    <button id="menu-toggle" class="menu-toggle">
+      <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
     <div class="nav-links" id="primary-nav">
       <a href="/index.html">الرئيسية</a>
       <a href="/news.html">الأخبار</a>
@@ -125,10 +109,27 @@
 </nav>
 
 <main id="news-content">
-  <div style="text-align:center; padding:100px 0;">جاري التحميل...</div>
+  <div style="text-align:center; padding:100px 0;">جاري تحميل الخبر...</div>
 </main>
 
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:4rem;">
+  <div class="container">
+    <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
+      <div>
+        <strong>مجلس طلاب خطوة</strong>
+        <p style="font-size:0.9rem; color:#64748b; margin-top:5px;">© <span id="year"></span> | ملبورن، أستراليا</p>
+      </div>
+      <div style="display:flex; gap:1.5rem;">
+        <a href="https://instagram.com/khotwa.sc" target="_blank" style="color:#e1306c; font-weight:bold; text-decoration:none;">Instagram</a>
+        <a href="/contact.html" style="color:var(--primary); text-decoration:none;">تواصل معنا</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
 <script>
+document.getElementById('year').textContent = new Date().getFullYear();
+
 async function loadNewsDetail() {
   const urlParams = new URLSearchParams(window.location.search);
   const id = urlParams.get('id');
@@ -140,12 +141,10 @@ async function loadNewsDetail() {
     const allNews = await KhotwaAPI.getNews();
     const news = allNews.find(n => n.id == id);
 
-    if (!news) throw new Error("News not found");
+    if (!news) throw new Error();
 
     const title = lang === 'ar' ? (news.titleAr || news.titleEn) : (news.titleEn || news.titleAr);
     const content = lang === 'ar' ? (news.contentAr || news.contentEn) : (news.contentEn || news.contentAr);
-    
-    // جلب الصورة بناءً على المسميات المحتملة في الـ API الخاص بك
     const imagePath = news.image || news.imageUrl || news.img || '';
     
     const shareUrl = encodeURIComponent(window.location.href);
@@ -153,17 +152,19 @@ async function loadNewsDetail() {
 
     document.getElementById('news-content').innerHTML = `
       <div class="news-detail-wrapper">
-        <a href="/news.html" class="btn-back">← العودة للأخبار</a>
+        <div style="margin-bottom:20px;">
+          <a href="/news.html" style="text-decoration:none; color:#64748b; font-weight:600;">← العودة للأخبار</a>
+        </div>
 
-        <header class="news-header">
-          <span class="news-category-badge">${news.category || 'خبر'}</span>
-          <h1 class="news-title-main">${title}</h1>
-          <div style="color:#94a3b8;">📅 ${new Date(news.createdAt).toLocaleDateString('ar-EG')}</div>
+        <header>
+          <span style="background:#f0f9ff; color:#0284c7; padding:4px 12px; border-radius:50px; font-size:0.8rem; font-weight:700;">${news.category || 'خبر'}</span>
+          <h1 style="margin-top:15px; font-size:2rem; font-weight:800; color:#1e293b;">${title}</h1>
+          <p style="color:#94a3b8; font-size:0.9rem; margin-top:10px;">📅 ${new Date(news.createdAt).toLocaleDateString('ar-EG')}</p>
         </header>
 
         ${imagePath ? `
           <div class="news-main-img-container">
-            <img src="${imagePath}" class="news-main-img" alt="${title}" onerror="this.style.display='none'">
+            <img src="${imagePath}" class="news-main-img" alt="${title}" onerror="this.parentElement.style.display='none'">
           </div>
         ` : ''}
 
@@ -172,7 +173,7 @@ async function loadNewsDetail() {
         </article>
 
         <section class="share-section">
-          <p style="font-weight:700;">مشاركة الخبر</p>
+          <p style="font-weight:700; margin-bottom:10px;">مشاركة الخبر</p>
           <div class="share-grid">
             <a href="https://twitter.com/intent/tweet?text=${shareTitle}&url=${shareUrl}" target="_blank" class="share-btn tw">𝕏 تويتر</a>
             <a href="https://wa.me/?text=${shareTitle}%20${shareUrl}" target="_blank" class="share-btn wa">واتساب</a>
