--- a/about.html
+++ b/about.html
@@ -5,204 +5,158 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>من نحن – Khotwa</title>
   
-  <meta name="keywords" content="مجلس طلاب خطوة, من نحن, رؤية المجلس, فريق العمل, جامعة لا تروب, ملبورن">
-  <meta name="description" content="تعرف على مجلس طلاب خطوة: رؤيتنا، رسالتنا، أهدافنا، وفريق العمل.">
-
   <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
-    :root {
-      --primary: #1e40af;
-      --ring: #e6eaf2;
-      --muted: #64748b;
+    /* حل مشكلة اختفاء الناف بار وتداخل المحتوى */
+    body { padding-top: 90px !important; }
+    @media (max-width: 960px) { body { padding-top: 70px !important; } }
+
+    /* الهيدر الرئيسي */
+    .about-header {
+      text-align: center;
+      padding: 3rem 1rem;
+      background: linear-gradient(to bottom, #f8fafc, #ffffff);
+      border-radius: 24px;
+      margin-bottom: 3rem;
     }
 
-    /* 1. تنسيق الناف بار المحدث */
-    .navbar { 
-      position: sticky; 
-      top: 0; 
-      z-index: 9999 !important; 
-      background: rgba(255, 255, 255, 0.98); 
-      border-bottom: 1px solid var(--ring);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.02);
-    }
+    .about-header h1 { font-size: 2.5rem; font-weight: 800; color: #1e293b; }
 
-    /* 2. تنظيم شبكة الصور (المجلس) */
-    .members {
+    /* شبكة الرؤية والرسالة (مرتبطة بالسكربت عبر data-section) */
+    .info-grid {
       display: grid;
-      /* تجعل الصور تترتب تلقائياً حسب عرض الشاشة */
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); 
-      gap: 2rem;
-      margin-top: 3rem;
-      padding: 10px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+      margin-bottom: 4rem;
     }
 
-    /* 3. تنسيق كرت العضو (توحيد الأحجام) */
+    .info-card {
+      padding: 2rem;
+      background: white;
+      border: 1px solid #e2e8f0;
+      border-radius: 20px;
+      transition: all 0.3s ease;
+    }
+
+    .info-card:hover { transform: translateY(-5px); box-shadow: 0 10px 25px rgba(0,0,0,0.05); }
+    .info-card h3 { color: #0284c7; margin-bottom: 1rem; display: flex; align-items: center; gap: 10px; }
+
+    /* شبكة الأعضاء (تنسيق الصور الموحد) */
+    .members-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
     .member-card {
-      background: #ffffff;
-      border: 1px solid var(--ring);
+      background: white;
       border-radius: 16px;
+      border: 1px solid #f1f5f9;
       overflow: hidden;
       text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.02);
+      transition: 0.3s;
     }
 
-    .member-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.08);
-    }
-
-    /* توحيد أحجام الصور تماماً */
     .member-card img {
       width: 100%;
-      aspect-ratio: 1 / 1; /* يضمن أن الصورة مربعة تماماً */
-      object-fit: cover;   /* يمنع تمطيط الصورة ويقص الزوائد */
+      aspect-ratio: 1/1;
+      object-fit: cover;
       background: #f1f5f9;
-      display: block;
     }
 
-    .member-card h3 {
-      margin: 1rem 0.5rem 0.2rem;
-      font-size: 1.1rem;
-      color: #1e293b;
-    }
+    .member-card h3 { font-size: 1.1rem; margin: 15px 10px 5px; color: #1e293b; }
+    .member-card p { font-size: 0.9rem; color: #64748b; margin-bottom: 15px; }
 
-    .member-card p {
-      margin-bottom: 1rem;
-      color: var(--muted);
-      font-size: 0.95rem;
-    }
-
-    /* 4. تنسيق الفوتر الجديد */
-    footer {
-      background: #ffffff;
-      padding: 3rem 0 1.5rem;
-      border-top: 1px solid var(--ring);
-      margin-top: 5rem;
-    }
-    .footer-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 1.5rem;
-    }
-
-    /* للجوال */
     @media (max-width: 600px) {
-      .members { grid-template-columns: repeat(2, 1fr); gap: 1rem; }
-      .member-card h3 { font-size: 1rem; }
+      .members-grid { grid-template-columns: repeat(2, 1fr); gap: 1rem; }
     }
-
-    [hidden] { display: none !important; }
   </style>
 </head>
 <body>
 
 <nav class="navbar">
   <div class="container nav-inner">
-
-    <!-- Logo -->
     <a class="brand" href="/index.html">
-      <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo" width="40" height="40">
+      <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
       <span data-lang="ar">مجلس طلاب خطوة</span>
-      <span data-lang="en" hidden>Khotwa Council</span>
     </a>
-
-    <!-- زر الموبايل -->
-    <button id="menu-toggle"
-            class="menu-toggle"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-      ☰
-    </button>
-
-    <!-- الروابط -->
-    <div class="nav-links" id="primary-nav" data-open="false">
-
-      <a href="/index.html">
-        <span data-lang="ar">الرئيسية</span>
-        <span data-lang="en" hidden>Home</span>
-      </a>
-
-      <a href="/news.html">
-        <span data-lang="ar">الأخبار</span>
-        <span data-lang="en" hidden>News</span>
-      </a>
-
-      <a href="/about.html" class="active">
-        <span data-lang="ar">من نحن</span>
-        <span data-lang="en" hidden>About</span>
-      </a>
-
-      <a href="/contact.html">
-        <span data-lang="ar">اتصل بنا</span>
-        <span data-lang="en" hidden>Contact</span>
-      </a>
-
-      <button id="lang-toggle" class="lang-toggle">
-        English
-      </button>
-
+    <button id="menu-toggle" class="menu-toggle">☰</button>
+    <div class="nav-links" id="primary-nav">
+      <a href="/index.html">الرئيسية</a>
+      <a href="/news.html">الأخبار</a>
+      <a href="/about.html" class="active">من نحن</a>
+      <a href="/contact.html">اتصل بنا</a>
+      <button id="lang-toggle" class="lang-toggle">English</button>
     </div>
   </div>
 </nav>
 
-  <main class="container" id="main">
-    <section>
-      <div class="section-head">
-        <h1 data-lang="ar">من نحن</h1>
-        <h1 data-lang="en" hidden>About Us</h1>
-      </div>
-      <p class="muted" data-lang="ar">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
+<main class="container">
+  <header class="about-header">
+    <h1 data-lang="ar">من نحن</h1>
+    <h1 data-lang="en" hidden>About Us</h1>
+    <p class="muted" data-lang="ar">تعرف على رؤية وأهداف وفريق عمل مجلس طلاب خطوة</p>
+  </header>
 
-      <div class="grid grid-2" style="margin-top:2rem">
-        <article class="card">
-          <h3 data-lang="ar">الرؤية</h3>
-          <p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p>
-        </article>
-        <article class="card">
-          <h3 data-lang="ar">الرسالة</h3>
-          <p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب الدراسية.</p>
-        </article>
-      </div>
-    </section>
+  <div class="info-grid">
+    <article class="info-card" data-section="vision">
+      <h3><span>👁️</span> الرؤية</h3>
+      <p>جارٍ التحميل...</p>
+    </article>
 
-    <section>
-      <div class="section-head">
-        <h2 data-lang="ar">أعضاء المجلس والإدارة</h2>
-        <h2 data-lang="en" hidden>Council Members</h2>
-      </div>
-      
-      <div class="members" id="council-members-container">
-        <p class="muted" style="grid-column: 1/-1; text-align: center;">جاري تحميل فريق العمل...</p>
-      </div>
-    </section>
-  </main>
+    <article class="info-card" data-section="mission">
+      <h3><span>🚀</span> الرسالة</h3>
+      <p>جارٍ التحميل...</p>
+    </article>
 
-  <footer>
-    <div class="container footer-content">
-      <div class="muted">© <span id="year"></span> مجلس طلاب خطوة - ملبورن</div>
-      <div class="socials">
-        <a href="https://www.instagram.com/khotwa.sc/" target="_blank">Instagram</a>
-      </div>
+    <article class="info-card" data-section="goals">
+      <h3><span>🎯</span> الأهداف</h3>
+      <p>جارٍ التحميل...</p>
+    </article>
+
+    <article class="info-card" data-section="organization">
+      <h3><span>🏛️</span> التنظيم</h3>
+      <p>جارٍ التحميل...</p>
+    </article>
+  </div>
+
+  <section>
+    <div class="section-head" style="text-align:center; margin-bottom: 2rem;">
+      <h2 data-lang="ar">أعضاء المجلس والإدارة</h2>
+      <p class="muted">نخبة من الطلاب يعملون لخدمتكم</p>
     </div>
-  </footer>
+    
+    <div class="members-grid" id="council-members-container">
+      <p style="grid-column: 1/-1; text-align: center; padding: 3rem; color: #94a3b8;">جاري تحميل فريق العمل...</p>
+    </div>
+  </section>
+</main>
 
-  <script src="/js/config.js"></script>
-  <script src="/js/language-toggle.js"></script>
-  <script src="/js/menu-toggle.js"></script>
-  <script src="/js/about-loader.js"></script>
-  
-  <script>
-    // تحديث السنة
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:5rem;">
+  <div class="container" style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
+    <div>
+      <strong>مجلس طلاب خطوة</strong>
+      <p style="font-size:0.9rem; color:#64748b;">© <span id="year"></span> | ملبورن، أستراليا</p>
+    </div>
+    <div class="socials">
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" style="color:#e1306c; font-weight:bold; text-decoration:none;">Instagram</a>
+    </div>
+  </div>
+</footer>
+
+<script src="/js/config.js"></script>
+<script src="/js/language-toggle.js"></script>
+<script src="/js/menu-toggle.js"></script>
+<script src="/js/about-loader.js"></script>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
